Optmized some integer manipulation.