@@ -323,7 +323,7 @@ public class ListGrantContractAndInsuranceByCriteria extends Service {
 		}
 
 		if (justActiveContracts != null && justActiveContracts.booleanValue()) {
-		    if (!grantContractRegime.getState().equals(new Integer(1))) {
+		    if (!grantContractRegime.getState().equals(Integer.valueOf(1))) {
 			continue;
 		    }
 		    if (grantContractRegime.getGrantContract().getEndContractMotive() != null
@@ -333,7 +333,7 @@ public class ListGrantContractAndInsuranceByCriteria extends Service {
 		}
 
 		if (justDesactiveContracts != null && justDesactiveContracts.booleanValue()) {
-		    if (grantContractRegime.getState().equals(new Integer(1))
+		    if (grantContractRegime.getState().equals(Integer.valueOf(1))
 			    && (grantContractRegime.getGrantContract().getEndContractMotive() == null || grantContractRegime
 				    .getGrantContract().getEndContractMotive().equals(""))) {
 			continue;
@@ -379,7 +379,7 @@ public class ListGrantContractAndInsuranceByCriteria extends Service {
 
     public Integer countAllByCriteria(Boolean justActiveContracts, Boolean justDesactiveContracts, Date dateBeginContract,
 	    Date dateEndContract, Integer grantTypeId, Date validToTheDate) throws FenixServiceException, FenixFilterException {
-	Integer result = new Integer(0);
+	Integer result = Integer.valueOf(0);
 
 	List<GrantContractRegime> grantContractRegimes = new ArrayList<GrantContractRegime>();
 	grantContractRegimes.addAll(rootDomainObject.getGrantContractRegimes());
@@ -460,7 +460,7 @@ public class ListGrantContractAndInsuranceByCriteria extends Service {
 		}
 
 		if (justActiveContracts != null && justActiveContracts.booleanValue()) {
-		    if (!grantContractRegime.getState().equals(new Integer(1))) {
+		    if (!grantContractRegime.getState().equals(Integer.valueOf(1))) {
 			continue;
 		    }
 		    if (grantContractRegime.getGrantContract().getEndContractMotive() != null
@@ -470,7 +470,7 @@ public class ListGrantContractAndInsuranceByCriteria extends Service {
 		}
 
 		if (justDesactiveContracts != null && justDesactiveContracts.booleanValue()) {
-		    if (grantContractRegime.getState().equals(new Integer(1))
+		    if (grantContractRegime.getState().equals(Integer.valueOf(1))
 			    && (grantContractRegime.getGrantContract().getEndContractMotive() == null || grantContractRegime
 				    .getGrantContract().getEndContractMotive().equals(""))) {
 			continue;
@@ -487,7 +487,7 @@ public class ListGrantContractAndInsuranceByCriteria extends Service {
 		    continue;
 		}
 		if (justActiveContracts != null && justActiveContracts.booleanValue()) {
-		    if (!grantContractRegime.getState().equals(new Integer(1))) {
+		    if (!grantContractRegime.getState().equals(Integer.valueOf(1))) {
 			continue;
 		    }
 		    if (grantContractRegime.getGrantContract().getEndContractMotive() != null
@@ -497,7 +497,7 @@ public class ListGrantContractAndInsuranceByCriteria extends Service {
 		}
 
 		if (justDesactiveContracts != null && justDesactiveContracts.booleanValue()) {
-		    if (grantContractRegime.getState().equals(new Integer(1))
+		    if (grantContractRegime.getState().equals(Integer.valueOf(1))
 			    && (grantContractRegime.getGrantContract().getEndContractMotive() == null || grantContractRegime
 				    .getGrantContract().getEndContractMotive().equals(""))) {
 			continue;
